# renderer

./: .gitattributes  .gitignore  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  acinclude.m4  aclocal.m4  bootstrap  configure  configure.ac
3D-Objects/: .gitignore  box-and-plane.ply  chessboard.tri.bvh  dragon_vis.ply  kerolamp.ply  knot.ply  legocar.3ds  ludwig.ply  millenium.ply  pharaoh.ply  platform.ply  scene.ply  single.ply  sphere.ply  square.ply  statue.ply  tie.ply  torus.ply  trainColor.tri  x-wing.ply
VisualC/Renderer-2.x/: ReadMe.txt  Renderer-2.x.sln  Renderer-2.x.vcproj  config.h
VisualC/Renderer-2.x/libtbb/: tbb.lib
VisualC/Renderer-2.x/libtbb/tbb/: concurrent_hash_map.h  concurrent_vector.h  enumerable_thread_specific.h  parallel_scan.h  task.h  task_group.h  tbb_config.h  tbb_exception.h  tbb_stddef.h
contrib/: README  bits  build.using.IntelCC.and.OpenMP  build.using.IntelCC.and.TBB  createHelpTexture.sh  keys.txt  onScreenKeys.txt
debian/: changelog  control  files  renderer.substvars
debian/patches/: create_installable_binary  series
lib3ds-1.3.0/: Makefile.in  aclocal.m4  config.h.in  configure
lib3ds-1.3.0/lib3ds/: Makefile.in  background.c  file.c
lib3ds-1.3.0/tools/: Makefile.in
src/: 3d.h  Algebra.h  BVH.cc  BVH.h  Base3d.cc  Base3d.h  Camera.cc  Camera.h  Clock.h  Defines.h  Exceptions.h  Fillers.h  HelpKeys.h  Keyboard.cc  Keyboard.h  Light.cc  Light.h  LightingEq.h  Loader.cc  MLAA.cc  MLAA.h  Makefile.am  Makefile.in  OnlineHelpKeys.h  Rasterizers.cc  Raytracer.cc  ScanConverter.h  Scene.h  Screen.cc  Screen.h  Types.h  Wu.cc  Wu.h  config.h.in  cppcheck.sh  renderer.cc  showShadowMap.cc
