DISTCLEANFILES = *~ *.~*

SUBDIRS = @subdirs@ src

EXTRA_DIST = README.md README COPYING INSTALL AUTHORS NEWS ChangeLog \
    contrib/build.using.IntelCC.and.OpenMP \
    contrib/build.using.IntelCC.and.TBB	contrib/README \
    contrib/createHelpTexture.sh contrib/keys.txt \
    contrib/onScreenKeys.txt \
    VisualC/Renderer-2.x/lib3ds/lib/lib3ds-1_3.lib \
    VisualC/Renderer-2.x/lib3ds-1_3.dll \
    VisualC/Renderer-2.x/Renderer-2.x.sln \
    VisualC/Renderer-2.x/libSDL/lib/SDLmain.lib \
    VisualC/Renderer-2.x/libSDL/lib/SDL.lib \
    VisualC/Renderer-2.x/libSDL/include/SDL_events.h \
    VisualC/Renderer-2.x/libSDL/include/close_code.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_main.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_rwops.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_config_amiga.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_loadso.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_getenv.h \
    VisualC/Renderer-2.x/libSDL/include/begin_code.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_active.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_config.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_copying.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_keysym.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_config_dreamcast.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_mouse.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_video.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_config_macosx.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_types.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_config_win32.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_config_os2.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_mutex.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_byteorder.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_version.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_timer.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_cpuinfo.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_audio.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_config_nds.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_joystick.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_keyboard.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_name.h \
    VisualC/Renderer-2.x/libSDL/include/SDL.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_config_macos.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_stdinc.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_error.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_config_symbian.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_cdrom.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_thread.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_syswm.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_quit.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_endian.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_opengl.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_config_minimal.h \
    VisualC/Renderer-2.x/libSDL/include/SDL_platform.h \
    VisualC/Renderer-2.x/tbb.dll \
    VisualC/Renderer-2.x/config.h \
    VisualC/Renderer-2.x/ReadMe.txt \
    VisualC/Renderer-2.x/libtbb/tbb/parallel_scan.h \
    VisualC/Renderer-2.x/libtbb/tbb/tbb_exception.h \
    VisualC/Renderer-2.x/libtbb/tbb/machine/linux_ia32.h \
    VisualC/Renderer-2.x/libtbb/tbb/machine/linux_ia64.h \
    VisualC/Renderer-2.x/libtbb/tbb/machine/linux_common.h \
    VisualC/Renderer-2.x/libtbb/tbb/machine/linux_intel64.h \
    VisualC/Renderer-2.x/libtbb/tbb/machine/windows_intel64.h \
    VisualC/Renderer-2.x/libtbb/tbb/machine/ibm_aix51.h \
    VisualC/Renderer-2.x/libtbb/tbb/machine/windows_ia32.h \
    VisualC/Renderer-2.x/libtbb/tbb/machine/mac_ppc.h \
    VisualC/Renderer-2.x/libtbb/tbb/queuing_mutex.h \
    VisualC/Renderer-2.x/libtbb/tbb/blocked_range3d.h \
    VisualC/Renderer-2.x/libtbb/tbb/tbb_allocator.h \
    VisualC/Renderer-2.x/libtbb/tbb/parallel_for.h \
    VisualC/Renderer-2.x/libtbb/tbb/tick_count.h \
    VisualC/Renderer-2.x/libtbb/tbb/parallel_invoke.h \
    VisualC/Renderer-2.x/libtbb/tbb/aligned_space.h \
    VisualC/Renderer-2.x/libtbb/tbb/spin_mutex.h \
    VisualC/Renderer-2.x/libtbb/tbb/tbb_profiling.h \
    VisualC/Renderer-2.x/libtbb/tbb/combinable.h \
    VisualC/Renderer-2.x/libtbb/tbb/partitioner.h \
    VisualC/Renderer-2.x/libtbb/tbb/index.html \
    VisualC/Renderer-2.x/libtbb/tbb/scalable_allocator.h \
    VisualC/Renderer-2.x/libtbb/tbb/parallel_for_each.h \
    VisualC/Renderer-2.x/libtbb/tbb/pipeline.h \
    VisualC/Renderer-2.x/libtbb/tbb/parallel_reduce.h \
    VisualC/Renderer-2.x/libtbb/tbb/blocked_range.h \
    VisualC/Renderer-2.x/libtbb/tbb/tbb_config.h \
    VisualC/Renderer-2.x/libtbb/tbb/tbb_stddef.h \
    VisualC/Renderer-2.x/libtbb/tbb/parallel_do.h \
    VisualC/Renderer-2.x/libtbb/tbb/atomic.h \
    VisualC/Renderer-2.x/libtbb/tbb/concurrent_vector.h \
    VisualC/Renderer-2.x/libtbb/tbb/_concurrent_queue_internal.h \
    VisualC/Renderer-2.x/libtbb/tbb/null_mutex.h \
    VisualC/Renderer-2.x/libtbb/tbb/tbb_thread.h \
    VisualC/Renderer-2.x/libtbb/tbb/concurrent_queue.h \
    VisualC/Renderer-2.x/libtbb/tbb/compat/ppl.h \
    VisualC/Renderer-2.x/libtbb/tbb/mutex.h \
    VisualC/Renderer-2.x/libtbb/tbb/null_rw_mutex.h \
    VisualC/Renderer-2.x/libtbb/tbb/_tbb_windef.h \
    VisualC/Renderer-2.x/libtbb/tbb/tbbmalloc_proxy.h \
    VisualC/Renderer-2.x/libtbb/tbb/blocked_range2d.h \
    VisualC/Renderer-2.x/libtbb/tbb/task.h \
    VisualC/Renderer-2.x/libtbb/tbb/recursive_mutex.h \
    VisualC/Renderer-2.x/libtbb/tbb/task_group.h \
    VisualC/Renderer-2.x/libtbb/tbb/concurrent_hash_map.h \
    VisualC/Renderer-2.x/libtbb/tbb/task_scheduler_init.h \
    VisualC/Renderer-2.x/libtbb/tbb/enumerable_thread_specific.h \
    VisualC/Renderer-2.x/libtbb/tbb/task_scheduler_observer.h \
    VisualC/Renderer-2.x/libtbb/tbb/tbb_machine.h \
    VisualC/Renderer-2.x/libtbb/tbb/parallel_while.h \
    VisualC/Renderer-2.x/libtbb/tbb/parallel_sort.h \
    VisualC/Renderer-2.x/libtbb/tbb/spin_rw_mutex.h \
    VisualC/Renderer-2.x/libtbb/tbb/cache_aligned_allocator.h \
    VisualC/Renderer-2.x/libtbb/tbb/queuing_rw_mutex.h \
    VisualC/Renderer-2.x/libtbb/tbb/tbb.h \
    VisualC/Renderer-2.x/libtbb/tbb.lib \
    VisualC/Renderer-2.x/SDL.dll \
    VisualC/Renderer-2.x/Renderer-2.x.vcproj \
    3D-Objects/chessboard.tri 3D-Objects/knot.ply \
    3D-Objects/legocar.3ds 3D-Objects/millenium.ply \
    3D-Objects/pharaoh.ply 3D-Objects/statue.ply 3D-Objects/tie.ply \
    3D-Objects/torus.ply 3D-Objects/trainColor.tri 3D-Objects/x-wing.ply

bench:
	make -C src bench
